# mummy

./: CMakeLists.txt  CSharpTestDriver.cs.in  CTestConfig.cmake  CTestCustom.cmake.in  ConfigureAndBuild.cmake.in  CvsMacros.cmake  DoConfigureAndBuild.cmake  FindCsharp.cmake  MsvcMacros.cmake  MummyApplication.cxx  MummyApplication.h  MummyCMakeMacros.cmake  MummyCPack.cmake  MummyConfig.cmake.in  MummyCsharpExportLayerGenerator.cxx  MummyCsharpExportLayerGenerator.h  MummyCsharpGenerator.cxx  MummyCsharpGenerator.h  MummyCsharpShadowLayerGenerator.cxx  MummyCsharpShadowLayerGenerator.h  MummyCsharpUnitTestGenerator.cxx  MummyCsharpUnitTestGenerator.h  MummyDoxygen.cmake  MummyDoxygen.doxyfile.in  MummyDummyGenerator.cxx  MummyDummyGenerator.h  MummyGenerator.cxx  MummyGenerator.h  MummyLicense.txt  MummyLineOrientedTextFileReader.cxx  MummyLineOrientedTextFileReader.h  MummyLog.h  MummyMain.cxx  MummyRuntime.h  MummySettings.cxx  MummySettings.h  MummyUtilities.cxx  MummyUtilities.h  MummyVersion.h.in  MummyVersion.rc.in  (+1 more)
Examples/: CMakeLists.txt
Examples/Vehicles/: CMakeLists.txt  CTestConfig.cmake  MsvcMacros.cmake  VehiclesConfig.h.in
Examples/Vehicles/base/: AbstractVehicle.cxx  AbstractVehicle.h  AbstractVehicleEvent.h  BlatMobile.cxx  BlatMobile.h  CMakeLists.txt  FuelLevelChanged.h  FuelLevelChangedEventArgs.h  InlineWrapperHints.h  Oops.cxx  Oops.h  RefCountedVehicle.cxx  RefCountedVehicle.h  SenderDataEvent.h  SignatureSeries.cxx  SignatureSeries.h  SillyString.cxx  SillyString.h  SimpleVehicle.cxx  SimpleVehicle.h  StructOf12Bytes.h  StructOf16Bytes.h  StructOf1Byte.h  StructOf2Bytes.h  StructOf4Bytes.h  StructOf8Bytes.h  UnwrappedClass.cxx  UnwrappedClass.h  Vehicle.cxx  Vehicle.h  VehicleDescriptor.h
Examples/Vehicles/cars/: AbstractCar.cxx  AbstractCar.h  CMakeLists.txt  Mustang.cxx  Mustang.h
Examples/Vehicles/motorcycles/: CMakeLists.txt  GenericMotorCycle.cxx  GenericMotorCycle.h
Examples/Vehicles/suvs/: CMakeLists.txt  GenericSUV.cxx  GenericSUV.h
Examples/Vehicles/tests/: CMakeLists.txt  TestAllVehicles.cxx  TestAllVehicles.h  TestCallback.cxx  TestCallback.h  TestMain.cxx.in  TestPerformance.cxx  TestPerformance.h  TestPerformanceArrayAccess.cxx  TestPerformanceArrayAccess.h  tests32.def  tests64.def
Examples/Vehicles/wrappers/: CMakeLists.txt
Examples/Vehicles/wrappers/csharpmummy/: CMakeLists.txt  ManualTestAllVehicles.cs  ManualTestBlatMobile.cs  ManualTestCallback.cs  ManualTestEvent.cs  ManualTestPerformance.cs  ManualTestPerformanceArrayAccess.cs  ManualTestRefCountedVehicle.cs  ManualTestSignatureSeries.cs  ManualTestSimpleVehicle.cs  MummySettings.xml.in  TestMain.cs.in  WrappedException.cs.in  WrappedObject.cs.in  extra.cs.in  gccxml.cxx.in
MummyTesting/: CMakeLists.txt
MummyTesting/HandCrafted/: CMakeLists.txt  handCraftedMummySettings.xml  handCraftedSimple.cs  simple.cxx  simple.h  simple_gccxml.cxx.in
MummyTesting/Simple/: CMakeLists.txt  main.cxx  simple.cxx  simple.h  simpleExportLayerTest.cxx  simple_gccxml.cxx.in
MummyTesting/SuppressWarnings/: CMakeLists.txt  MummySettings.xml
Runtime/: AssemblyInfo.cs.in  CMakeLists.txt  CreateTestMain.cs  MRSmokeTest.cs.in  MRSmokeTest.cxx  MRSmokeTest.h  MRSmokeTestMain.cs  MRSmokeTestMain.cxx  MummyRuntime.cs.in  MummyRuntime.cxx  MummyRuntime.h  MummySettings.xml.in  MummyTypeEntry.cs  MummyTypeEntry.cxx  MummyTypeEntry.h  WrappedException.cs  WrappedObject.cs  WrappedObject.cs.in  gccxml.cxx.in
